--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>id.easyHub</groupId>
-    <artifactId>ConsoleFree</artifactId>
+    <artifactId>ArduinoEasyIDE</artifactId>
     <version>3.3.3</version>
 
     <dependencies>
@@ -84,5 +84,5 @@
         </plugins>
         
     </build>
-
+    <name>ArduinoEasyIDE</name>
 </project>
