--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <version>3.3.3</version>
 
     <dependencies>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-shell</artifactId>
+            <version>3.2.0</version>
+        </dependency>
  
         <dependency>
             <groupId>junit</groupId>
