--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.fazecast</groupId>
+            <artifactId>jSerialComm</artifactId>
+            <version>1.3.11</version>
+        </dependency>
+        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-shell</artifactId>
             <version>3.2.0</version>
@@ -30,7 +35,7 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
             <!--<version>${project.version}</version>-->
-            <version>3.2.0</version>
+            <version>3.3.3</version>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
